--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,8 @@ body {
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
 }
 
 .text-center {
@@ -26,10 +28,10 @@ body {
 }
 
 .square {
-    height: 50px;
-    width: 50px;
+    height: 55px;
+    width: 55px;
     text-align: center;
-    line-height: 50px;
+    line-height: 55px;
 }
 
 .red {
